Add jdk11 profile